Fix text wrapping for dekstop version
Text was wrapping in ugly way in desktop version.
Fixed by adjusting margins and disabling text wrapping.

Resolves: #16

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
     overflow-x:auto;
     position: relative;
 }
+/* @media only screen and (max-width: 1800px) {
+    #App {
+        width: 1800px
+    }
+} */
 @media only screen and (max-width: 900px) {
     #App {
         height: 2062px;
